Updated project files

--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -1,1 +1,245 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "5f04d536",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "Poeple = [\"Aleksei\",\"Amine\",\"Anna\",\"Astha\",\"Brigitta\",\n",
+    "                 \"Bryan\",\"Ena\",\"Esra\",\"Faranges\",\"Frédéric\",\n",
+    "                 \"Hamideh\",\"Héloïse\",\"Imran\",\"Intan K.\",\n",
+    "                 \"Jens\",\"Kristin\",\"Michiel\",\"Nancy\",\"Pierrick\",\n",
+    "                 \"Sandrine\",\"Tim\",\"Viktor\",\"Welederufeal\",\"Živile\"]\n",
+    "\n",
+    "class Seat:\n",
+    "    def __init__(self,  free=True , occupant=\"\"):\n",
+    "        self.free= free \n",
+    "        self.occupant=occupant \n",
+    "\n",
+    "    def seat_occupant(self, name):\n",
+    "        if self.free:\n",
+    "           self.occupant=name \n",
+    "           self.free=False\n",
+    "           print(f'this seat is occupied by : {name}')\n",
+    "        else :\n",
+    "            print(' this seat is occupied before ')\n",
+    "    def remove_occupant(self):\n",
+    "         if not self.free :\n",
+    "             before=self.occupant\n",
+    "             self.occupant= \" \" \n",
+    "             self.free=True\n",
+    "             print (f'this seat occupied by  {before} now it is free now ')\n",
+    "             return before\n",
+    "         else:\n",
+    "             print ('This seat is already free')\n",
+    "             return \n",
+    "class Table:\n",
+    "    def __init__(self, capacity:int ):\n",
+    "        self.capacity=capacity\n",
+    "        self.seats = []\n",
+    "        for  i  in range(capacity):\n",
+    "            self.seats.append(Seat())  # that means if the capacit is 4 so it creat list with 4 seat class self.seats=[Seat(),Seat(),Seat(),Seat()]\n",
+    "        \n",
+    "\n",
+    "    def has_free_spot(self ) -> bool : #that returns a boolean (True if a spot is available)\n",
+    "        for s_spot  in self.seats:\n",
+    "            if s_spot.free :\n",
+    "              return True \n",
+    "        return False \n",
+    "\n",
+    "    def assign_seat(self , name): #that places someone at the table\n",
+    "        \n",
+    "        if self.has_free_spot( ):\n",
+    "           for s_spot in self.seats:\n",
+    "               if s_spot.free:\n",
+    "                  s_spot.seat_occupant(name)\n",
+    "                  return True\n",
+    "        else: \n",
+    "            print (\"no more free seats on the table \")\n",
+    "            return False\n",
+    "\n",
+    "    def left_capacity(self ) -> int :# Go through the list of seats (self.seats)Check if each seat is free Count how many are free , returns an integer\n",
+    "       free_s_count=0\n",
+    "       for s_spot in  self.seats:\n",
+    "           if s_spot.free:\n",
+    "                free_s_count+=1\n",
+    "       return free_s_count \n",
+    "\n",
+    "class An_Open_Space :\n",
+    "    def __init__(self, number_of_tables:int,table_capacity :int):\n",
+    "        self.tables=[]# This is a list of Table objects.\n",
+    "        self.number_of_tables=number_of_tables\n",
+    "        for i in range(number_of_tables):\n",
+    "            self.tables.append(Table(capacity=table_capacity))\n",
+    "\n",
+    "    def organize(self, names): #that will:randomly assign people to Seat objects in the different Table objects.\n",
+    "        for name in names :\n",
+    "            free_tables = []\n",
+    "            for table in self.tables:\n",
+    "               if table.has_free_spot():\n",
+    "                  free_tables.append(table)\n",
+    "            if not free_tables:\n",
+    "               print(f\"No free seats available for {name}\")\n",
+    "            else:\n",
+    "                chosen_table = random.choice(free_tables)\n",
+    "                chosen_table.assign_seat(name)\n",
+    "    def display(self): #display the different tables and there occupants in a nice and readable waystore\n",
+    "        table_number = 1\n",
+    "        for table in self.tables:\n",
+    "            print(f\"\\nTable {table_number}:\")\n",
+    "            seat_number = 1\n",
+    "            for seat in table.seats:\n",
+    "                if seat.free:\n",
+    "                    print(f\"  Seat {seat_number}: Free\")\n",
+    "                else:\n",
+    "                    print(f\"  Seat {seat_number}: Occupied by {seat.occupant}\")\n",
+    "                seat_number += 1\n",
+    "            table_number += 1\n",
+    "\n",
+    "    def store(self , filename): #store the repartition in an file\n",
+    "         with open(filename, \"w\") as f:\n",
+    "            table_number = 1\n",
+    "            for table in self.tables:\n",
+    "                f.write(f\"Table {table_number}:\\n\")\n",
+    "                seat_number = 1\n",
+    "                for seat in table.seats:\n",
+    "                    if seat.free:\n",
+    "                        f.write(f\"  Seat {seat_number}: Free\\n\")\n",
+    "                    else:\n",
+    "                        f.write(f\"  Seat {seat_number}: Occupied by {seat.occupant}\\n\")\n",
+    "                    seat_number += 1\n",
+    "                table_number += 1\n",
+    "\n",
+    "   \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80ed8501",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this seat is occupied by : losy\n",
+      "this seat occupied by  losy now it is free now \n",
+      "This seat is already free\n",
+      "this seat is occupied by : nancy\n",
+      "Is the table has free seat: True\n",
+      "How many free seats left: 4\n",
+      "Number of tables in open space: 6\n",
+      "Capacity of each table: 4\n",
+      "Free seats in first table: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Seat:\n",
+    "    def __init__(self,  free=True , occupant=\"\"):\n",
+    "        self.free= free \n",
+    "        self.occupant=occupant \n",
+    "\n",
+    "    def seat_occupant(self, name):\n",
+    "        if self.free:\n",
+    "           self.occupant=name \n",
+    "           self.free=False\n",
+    "           print(f'this seat is occupied by : {name}')\n",
+    "        else :\n",
+    "            print(' this seat is occupied before ')\n",
+    "    def remove_occupant(self):\n",
+    "         if not self.free :\n",
+    "             before=self.occupant\n",
+    "             self.occupant= \" \" \n",
+    "             self.free=True\n",
+    "             print (f'this seat occupied by  {before} now it is free now ')\n",
+    "             return before\n",
+    "         else:\n",
+    "             print ('This seat is already free')\n",
+    "             return \n",
+    "class Table:\n",
+    "    def __init__(self, capacity:int ):\n",
+    "        self.capacity=capacity\n",
+    "        self.seats = []\n",
+    "        for  i  in range(capacity):\n",
+    "            self.seats.append(Seat())  # that means if the capacit is 4 so it creat list with 4 seat class self.seats=[Seat(),Seat(),Seat(),Seat()]\n",
+    "        \n",
+    "\n",
+    "    def has_free_spot(self ) -> bool : #that returns a boolean (True if a spot is available)\n",
+    "        for s_spot  in self.seats:\n",
+    "            if s_spot.free :\n",
+    "              return True \n",
+    "        return False \n",
+    "\n",
+    "    def assign_seat(self , name): #that places someone at the table\n",
+    "        \n",
+    "        if self.has_free_spot( ):\n",
+    "           for s_spot in self.seats:\n",
+    "               if s_spot.free:\n",
+    "                  s_spot.seat_occupant(name)\n",
+    "                  return True\n",
+    "        else: \n",
+    "            print (\"no more free seats on the table \")\n",
+    "            return False\n",
+    "\n",
+    "    def left_capacity(self ) -> int :# Go through the list of seats (self.seats)Check if each seat is free Count how many are free , returns an integer\n",
+    "       free_s_count=0\n",
+    "       for s_spot in  self.seats:\n",
+    "           if s_spot.free:\n",
+    "                free_s_count+=1\n",
+    "       return free_s_count \n",
+    "\n",
+    "class An_Open_Space :\n",
+    "    def __init__(self, number_of_tables:int,table_capacity :int):\n",
+    "        self.tables=[]# This is a list of Table objects.\n",
+    "        self.number_of_tables=number_of_tables\n",
+    "        for i in range(number_of_tables):\n",
+    "            self.tables.append(Table(capacity=table_capacity))\n",
+    "            \n",
+    "# --- Test Seat ---\n",
+    "seat1 = Seat()\n",
+    "seat1.seat_occupant(\"losy\")\n",
+    "seat1.remove_occupant()\n",
+    "seat1.remove_occupant()\n",
+    "seat1.seat_occupant(\"nancy\")\n",
+    "\n",
+    "# --- Test Table ---\n",
+    "table1 = Table(4)\n",
+    "print('Is the table has free seat:', table1.has_free_spot())\n",
+    "print('How many free seats left:', table1.left_capacity())\n",
+    "\n",
+    "# --- Test Open Space ---\n",
+    "openspace = An_Open_Space(6, 4)\n",
+    "print(\"Number of tables in open space:\", openspace.number_of_tables)\n",
+    "print(\"Capacity of each table:\", openspace.tables[0].capacity)\n",
+    "print(\"Free seats in first table:\", openspace.tables[0].left_capacity())\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
