Updated OpenSpace project: CSV reading in main, dynamic seating assignment, improved terminal display

--- a/dev_notebook.ipynb
+++ b/dev_notebook.ipynb
@@ -2,18 +2,147 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "5f04d536",
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
-    "Poeple = [\"Aleksei\",\"Amine\",\"Anna\",\"Astha\",\"Brigitta\",\n",
+    "names = [\"Aleksei\",\"Amine\",\"Anna\",\"Astha\",\"Brigitta\",\n",
     "                 \"Bryan\",\"Ena\",\"Esra\",\"Faranges\",\"Frédéric\",\n",
     "                 \"Hamideh\",\"Héloïse\",\"Imran\",\"Intan K.\",\n",
     "                 \"Jens\",\"Kristin\",\"Michiel\",\"Nancy\",\"Pierrick\",\n",
     "                 \"Sandrine\",\"Tim\",\"Viktor\",\"Welederufeal\",\"Živile\"]\n",
     "\n",
+    "class Seat:\n",
+    "    def __init__(self,  free=True , occupant=\"\"):\n",
+    "        self.free= free \n",
+    "        self.occupant=occupant \n",
+    "\n",
+    "    def seat_occupant(self, name):\n",
+    "        if self.free:\n",
+    "           self.occupant=name \n",
+    "           self.free=False\n",
+    "           print(f'this seat is occupied by : {name}')\n",
+    "        else :\n",
+    "            print(' this seat is occupied before ')\n",
+    "    def remove_occupant(self):\n",
+    "         if not self.free :\n",
+    "             before=self.occupant\n",
+    "             self.occupant= \" \" \n",
+    "             self.free=True\n",
+    "             print (f'this seat occupied by  {before} now it is free now ')\n",
+    "             return before\n",
+    "         else:\n",
+    "             print ('This seat is already free')\n",
+    "             return \n",
+    "class Table:\n",
+    "    def __init__(self, capacity:int ):\n",
+    "        self.capacity=capacity\n",
+    "        self.seats = []\n",
+    "        for  i  in range(capacity):\n",
+    "            self.seats.append(Seat())  # that means if the capacit is 4 so it creat list with 4 seat class self.seats=[Seat(),Seat(),Seat(),Seat()]\n",
+    "        \n",
+    "\n",
+    "    def has_free_spot(self ) -> bool : #that returns a boolean (True if a spot is available)\n",
+    "        for s_spot  in self.seats:     # s_spot is a seat in  list seats \n",
+    "            if s_spot.free :           # for the seat look if the attribute free is true or false \n",
+    "              return True \n",
+    "        return False \n",
+    "\n",
+    "    def assign_seat(self , name): #that places someone at the table\n",
+    "        if self.has_free_spot( ):   # checks if there is at least one free seat in the table\n",
+    "           for s_spot in self.seats:   # this loop to find the specific seat is free to put the person there.\n",
+    "               if s_spot.free:\n",
+    "                  s_spot.seat_occupant(name) #put the person there and mark the seat as occupied\n",
+    "                  return True\n",
+    "        else: \n",
+    "            print (\"no more free seats on the table \")\n",
+    "            return False\n",
+    "\n",
+    "    def left_capacity(self ) -> int :# Go through the list of seats (self.seats)Check if each seat is free Count how many are free , returns an integer\n",
+    "       free_s_count=0\n",
+    "       for s_spot in  self.seats:\n",
+    "           if s_spot.free:\n",
+    "                free_s_count+=1\n",
+    "       return free_s_count \n",
+    "\n",
+    "class An_Open_Space :\n",
+    "    def __init__(self, number_of_tables:int,table_capacity :int):    # if (6,4)\n",
+    "        self.tables=[]# This is a list of Table objects.\n",
+    "        self.number_of_tables=number_of_tables\n",
+    "        for i in range(number_of_tables):\n",
+    "            self.tables.append(Table(capacity=table_capacity)) # if (6,4) self.tables = [Table(4), Table(4), Table(4),Table(4),Table(4), Table(4)]\n",
+    "\n",
+    "    def organize(self, names:list): #that will:randomly assign people to Seat objects in the different Table objects.\n",
+    "        for name in names : # For each person  check which tables have free spots\n",
+    "            free_tables = []\n",
+    "            for table in self.tables: \n",
+    "               if table.has_free_spot(): #  check free spot in the table \n",
+    "                  free_tables.append(table) # add the table with free spot in the list free_table\n",
+    "            if not free_tables:   # If free_tables is empty, that means there are no seats left for the current person.\n",
+    "               print(f\"No free seats available for {name}\")\n",
+    "            else:\n",
+    "                chosen_table = random.choice(free_tables) # Picks a table randomly from free_table list \n",
+    "                chosen_table.assign_seat(name) # places the name  at the table\n",
+    "\n",
+    "    def display(self): #display the different tables and there occupants in a nice and readable waystore\n",
+    "        table_number = 1\n",
+    "        for table in self.tables:\n",
+    "            print(f\"\\nTable {table_number}:\")\n",
+    "            seat_number = 1\n",
+    "            for seat in table.seats:\n",
+    "                if seat.free:\n",
+    "                    print(f\"  Seat {seat_number}: Free\")\n",
+    "                else:\n",
+    "                    print(f\"  Seat {seat_number}: Occupied by {seat.occupant}\")\n",
+    "                seat_number += 1\n",
+    "            table_number += 1\n",
+    "    def store(self, filename=\"data/output.csv\"): #Store the seating arrangement in a CSV file\n",
+    "        import csv  # now we actually use it\n",
+    "\n",
+    "        with open(filename, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "            writer = csv.writer(f) # Write a header row\n",
+    "            writer.writerow([\"Table Number\", \"Seat Number\", \"Occupant\"])\n",
+    "\n",
+    "            table_number = 1\n",
+    "            for table in self.tables:\n",
+    "                seat_number = 1\n",
+    "                for seat in table.seats: # If the seat is free, mark \"Free\"; otherwise, write the occupant's name\n",
+    "                    occupant = seat.occupant if not seat.free else \"Free\"\n",
+    "                    writer.writerow([table_number, seat_number, occupant])\n",
+    "                    seat_number += 1\n",
+    "                table_number += 1\n",
+    "\n",
+    "   \n",
+    "   \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80ed8501",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this seat is occupied by : losy\n",
+      "this seat occupied by  losy now it is free now \n",
+      "This seat is already free\n",
+      "this seat is occupied by : nancy\n",
+      "Is the table has free seat: True\n",
+      "How many free seats left: 4\n",
+      "Number of tables in open space: 6\n",
+      "Capacity of each table: 4\n",
+      "Free seats in first table: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random \n",
     "class Seat:\n",
     "    def __init__(self,  free=True , occupant=\"\"):\n",
     "        self.free= free \n",
@@ -99,8 +228,8 @@
     "                seat_number += 1\n",
     "            table_number += 1\n",
     "\n",
-    "    def store(self , filename): #store the repartition in an file\n",
-    "         with open(filename, \"w\") as f:\n",
+    "    def store(self , filename=\"data/output.csv\"): #store the repartition in an file .csv\n",
+    "        with open(\"data/output.csv\", \"w\") as f:\n",
     "            table_number = 1\n",
     "            for table in self.tables:\n",
     "                f.write(f\"Table {table_number}:\\n\")\n",
@@ -113,93 +242,7 @@
     "                    seat_number += 1\n",
     "                table_number += 1\n",
     "\n",
-    "   \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "80ed8501",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "this seat is occupied by : losy\n",
-      "this seat occupied by  losy now it is free now \n",
-      "This seat is already free\n",
-      "this seat is occupied by : nancy\n",
-      "Is the table has free seat: True\n",
-      "How many free seats left: 4\n",
-      "Number of tables in open space: 6\n",
-      "Capacity of each table: 4\n",
-      "Free seats in first table: 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Seat:\n",
-    "    def __init__(self,  free=True , occupant=\"\"):\n",
-    "        self.free= free \n",
-    "        self.occupant=occupant \n",
     "\n",
-    "    def seat_occupant(self, name):\n",
-    "        if self.free:\n",
-    "           self.occupant=name \n",
-    "           self.free=False\n",
-    "           print(f'this seat is occupied by : {name}')\n",
-    "        else :\n",
-    "            print(' this seat is occupied before ')\n",
-    "    def remove_occupant(self):\n",
-    "         if not self.free :\n",
-    "             before=self.occupant\n",
-    "             self.occupant= \" \" \n",
-    "             self.free=True\n",
-    "             print (f'this seat occupied by  {before} now it is free now ')\n",
-    "             return before\n",
-    "         else:\n",
-    "             print ('This seat is already free')\n",
-    "             return \n",
-    "class Table:\n",
-    "    def __init__(self, capacity:int ):\n",
-    "        self.capacity=capacity\n",
-    "        self.seats = []\n",
-    "        for  i  in range(capacity):\n",
-    "            self.seats.append(Seat())  # that means if the capacit is 4 so it creat list with 4 seat class self.seats=[Seat(),Seat(),Seat(),Seat()]\n",
-    "        \n",
-    "\n",
-    "    def has_free_spot(self ) -> bool : #that returns a boolean (True if a spot is available)\n",
-    "        for s_spot  in self.seats:\n",
-    "            if s_spot.free :\n",
-    "              return True \n",
-    "        return False \n",
-    "\n",
-    "    def assign_seat(self , name): #that places someone at the table\n",
-    "        \n",
-    "        if self.has_free_spot( ):\n",
-    "           for s_spot in self.seats:\n",
-    "               if s_spot.free:\n",
-    "                  s_spot.seat_occupant(name)\n",
-    "                  return True\n",
-    "        else: \n",
-    "            print (\"no more free seats on the table \")\n",
-    "            return False\n",
-    "\n",
-    "    def left_capacity(self ) -> int :# Go through the list of seats (self.seats)Check if each seat is free Count how many are free , returns an integer\n",
-    "       free_s_count=0\n",
-    "       for s_spot in  self.seats:\n",
-    "           if s_spot.free:\n",
-    "                free_s_count+=1\n",
-    "       return free_s_count \n",
-    "\n",
-    "class An_Open_Space :\n",
-    "    def __init__(self, number_of_tables:int,table_capacity :int):\n",
-    "        self.tables=[]# This is a list of Table objects.\n",
-    "        self.number_of_tables=number_of_tables\n",
-    "        for i in range(number_of_tables):\n",
-    "            self.tables.append(Table(capacity=table_capacity))\n",
     "            \n",
     "# --- Test Seat ---\n",
     "seat1 = Seat()\n",
@@ -213,11 +256,59 @@
     "print('Is the table has free seat:', table1.has_free_spot())\n",
     "print('How many free seats left:', table1.left_capacity())\n",
     "\n",
+    "\n",
     "# --- Test Open Space ---\n",
     "openspace = An_Open_Space(6, 4)\n",
     "print(\"Number of tables in open space:\", openspace.number_of_tables)\n",
     "print(\"Capacity of each table:\", openspace.tables[0].capacity)\n",
-    "print(\"Free seats in first table:\", openspace.tables[0].left_capacity())\n"
+    "print(\"Free seats in first table:\", openspace.tables[0].left_capacity())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee41a018",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def organize(self, names:list): #that will:randomly assign people to Seat objects in the different Table objects.\n",
+    "        free_tables = []\n",
+    "        for table in self.tables:\n",
+    "           if table.has_free_spot():\n",
+    "                 free_tables.append(table)\n",
+    "        if not free_tables:   # If free_tables is empty, that means there are no seats left for the current person.\n",
+    "               return print(f\"No free seats available for {name}\")\n",
+    "        else: \n",
+    "            for name in names :            \n",
+    "                chosen_table=random.choice(free_tables)\n",
+    "                chosen_table.assign_seat(name)\n",
+    "                print ()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a266478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def store(self, filename=\"data/output.csv\"):\n",
+    "    \"\"\"Store the seating arrangement in a CSV file.\"\"\"\n",
+    "    import csv  # now we actually use it\n",
+    "\n",
+    "    with open(filename, \"w\", newline=\"\", encoding=\"utf-8\") as f:\n",
+    "        writer = csv.writer(f) # Write a header row\n",
+    "        writer.writerow([\"Table Number\", \"Seat Number\", \"Occupant\"])\n",
+    "\n",
+    "        table_number = 1\n",
+    "        for table in self.tables:\n",
+    "            seat_number = 1\n",
+    "            for seat in table.seats: # If the seat is free, mark \"Free\"; otherwise, write the occupant's name\n",
+    "                occupant = seat.occupant if not seat.free else \"Free\"\n",
+    "                writer.writerow([table_number, seat_number, occupant])\n",
+    "                seat_number += 1\n",
+    "            table_number += 1"
    ]
   }
  ],
